FireAlarmApplication.Web/mtg_debug_20260127_143739.txt

=== MTG FIRE DEBUG ===
Time: 2026-01-27 14:37:39
NetCDF: C:\Users\kubil\AppData\Local\Temp\8bf22bba-6d3b-4ea6-b0fd-99cb756539fb.nc

=== PYTHON STDERR (Debug Output) ===
  File "C:\Users\kubil\source\repos\FireAlarmApplication\FireAlarmApplication.Web\Scripts\parse_mtg_fire.py", line 32
    max_lat = float(parts[2])x""
                             ^
SyntaxError: invalid syntax


=== PYTHON STDOUT (JSON Output) ===


=== EXIT CODE ===
1
